Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-37472

receiverless QObject::connect() API doc could stress that if the (lambda) functor captures a QObject, the connection is not released when latter is destroyed (and point the context variant)

XMLWordPrintable

    • c1d41b42a18fc1566b2d5cfdae2a743f3e0fb8d9

      Caused this review request - is maybe clientbug prone, so pointing out this trap might be helpful.
      https://git.reviewboard.kde.org/r/116712/

        For Gerrit Dashboard: QTBUG-37472
        # Subject Branch Project Status CR V

            ogoffart Olivier Goffart (Woboq GmbH)
            luebking Thomas Lübking
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes